--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
         links and social media, so be sure to change this to whatever the
          dominant media will be
     -->
-  <meta name="description" content="Wintersession Issue">
+  <meta name="description" content="Wintersession Special Issue">
 
   <!-- Facebook Meta Tags -->
   <!-- <meta property="og:url" content="https://ankhitham.github.io/indigenousissue/"> -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Wintersession Issue">
-  <meta property="og:description" content="Wintersession Issue">
+  <meta property="og:title" content="Wintersession Special Issue">
+  <meta property="og:description" content="Wintersession Special Issue">
+  <meta property="og:image" content="https://prince-web-assets.s3.amazonaws.com/projects.dailyprincetonian.com/wintersession/wintersession.png">
+
   <!-- <meta property="og:image"
     content="https://snworksceo.imgix.net/pri/29943396-3928-4cdd-92d8-25d60eb0ae24.sized-1000x1000.png?"> -->
 
@@ -23,8 +25,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <!-- <meta property="twitter:domain" content="ankhitham.github.io"> -->
   <!-- <meta property="twitter:url" content="https://ankhitham.github.io/indigenousissue/"> -->
-  <meta name="twitter:title" content="Wintersession Issue">
-  <meta name="twitter:description" content="Wintersession Issue">
+  <meta name="twitter:title" content="Wintersession Special Issue">
+  <meta name="twitter:description" content="Wintersession Special Issue">
   <!-- <meta name="twitter:image"
     content="https://snworksceo.imgix.net/pri/29943396-3928-4cdd-92d8-25d60eb0ae24.sized-1000x1000.png?"> -->
 
@@ -137,11 +139,7 @@
         <b>This winter break</b>, Princeton undergraduates, graduate students, staff, and faculty were invited to participate in the third annual Wintersession program sponsored by the Office of Campus Engagement (OCE). 
       </p>
       <p>
-        To commemorate the largest Wintersession 2023, which includes 517 total offerings and over 4,000 participants, The Daily Princetonian created a project devoted to understanding the history of Wintersession, what Wintersession looks like today, and the value it provides to Princeton’s campus. Should Wintersession be expanded to allow students to discover new interests like columnist Tara Shukla offers or is it, as Anna Ferris argues, a dangerous byproduct of Princeton’s “productivity culture?”
-      </p>
-      <p>
-        From data analysis on the popularity of “How to” and “Professional Growth” courses to a Photo Essay of Wintersession trips, this project highlights how students spend Wintersession, and what this time says about Princeton’s culture and student life as a whole. 
-      </p>
+        To commemorate the largest Wintersession ever, which includes more than 500 total offerings and over 4,000 participants, The Daily Princetonian created a project devoted to understanding the history of Wintersession, what Wintersession looks like today, and the value it provides to Princeton’s campus.</p>
     </div>
 
   </div>
@@ -247,7 +245,7 @@
   </div>
 
   <div class="section info" id="prospect-11"
-  data-scroll-indicator-title="n">
+  data-scroll-indicator-title="Prospect 11">
   <div class="text">
     <p class="overline">PROSPECT</p>
     <h1 class="headline">Prospect 11: Wintersession Issue</h1>
@@ -378,7 +376,7 @@
   </div>
   
   <div class="section info" id="humor-winter"
-    data-scroll-indicator-title="Expand and invest in Wintersession">
+    data-scroll-indicator-title="Humor">
     <div class="text">
       <p class="overline">HUMOR</p>
       <h1 class="headline">HumOrpinion: University should divert all funding to Wintersession</h1>
